--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,7 +4,7 @@
     <style name="Theme.Loki" parent="android:Theme.Material.Light.NoActionBar" />
 
     <style name="Theme.Loki.SplashScreen" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenAnimatedIcon">@drawable/loki_black</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/loki_animated</item>
         <item name="postSplashScreenTheme">@style/Theme.Loki</item>
     </style>
 
